--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5"
+  },
+  "devDependencies": {
+    "supertest": "^7.0.0"
   }
 }
